--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   <a href="#">UPDATES</a>
   <br>
   <a href="#">MENU</a>
+ <br><br>
+ <a href="https://ibb.co/B572HdXV"><img src="https://i.ibb.co/HfMTL1WD/IMG-20250916-WA0196.jpg" alt="IMG-20250916-WA0196" border="0"></a>
 </html>
 <body bgcolor="red">
