--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
  <h1>WELCOME TO LEGENDS OF FREENET</h1>
 </body>
-<a href="#">ABOUT</a>
+<a href="about.html">ABOUT</a>
   <br>
   <a href="#">CONTACT</a>
   <br>
