--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
-<a href="index.html">WELCOME</a>
+<a href="index.html"></a>
+<h>WELCOME TO LEGENDS OF FREENET</h>
 <style>
   a{
-    fontsize:20px;
+    fontsize:50px;
   }
 </style>
 <body bgcolor="blue">
