--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <br>
   <a href="#">MENU</a>
  <br><br>
- <a href="https://ibb.co/B572HdXV"><img src="https://i.ibb.co/HfMTL1WD/IMG-20250916-WA0196.jpg" alt="IMG-20250916-WA0196" border="0"></a>
+ <a href="https://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="15"></a>
 </html>
 <body bgcolor="red">
