--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
  <a href="https://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="0"></a>
 <style>
  a{
-  background-color:red;
-  font-size:80px;
+  font-color:red;
+  font-size:20px;
+  width:300px;
+  height:200px;
  }
 </style>
 </html>
