--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 <style>
  a{
   font-color:red;
-  font-size:20px;
-  width:300px;
-  height:200px;
-  Justify-content:center;
+  font-size:30px;
+ justify-content:center;
   align-items:center;
  }
 </style>
