--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <a href="#">UPDATES</a>
   <br>
   <a href="#">MENU</a>
+ <br>
+ <div style="text-align: center;">
+  <a href="#">Link</a>
+ </div>
+ 
  <br><br>
  <a href="https://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="0"></a>
 <style>
