--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <br>
   <a href="#">MENU</a>
  <br>
- <div style="text-align: center;">
-  <a href="#">Link</a>
+ <div style="display: flex; justify-content: center;">
+  <a href="about.html">ABOUT</a>
+ </div>
  </div>
  
  <br><br>
