--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 <body>
  <h1>WELCOME TO LEGENDS OF FREENET</h1>
 </body>
-<a href="about.html">ABOUT</a>
+<div style="display: flex; justify-content: center;">
+  <a href="host.html">HOST TESTER</a>
+</div>
   <br>
+ <div style="display: flex; justify-content: center;">
   <a href="contact.html">CONTACT</a>
+ </div>
   <br>
   <a href="#">UPDATES</a>
   <br>
@@ -22,7 +26,12 @@
  </div>
  
  <br><br>
- <a href="https://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="0"></a>
+ <div style="text-align: center;">
+  <img src="https://ibb.co/BVsNz80z;                                             
+       alt="IMG-20251107-WA0000" 
+       style="border: 5px solid #FF0000; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+ </div>
+ 
 <style>
  a{
   font-color:red;
