--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype HTML>
+right<!doctype HTML>
 <html>
 
 <head>
@@ -27,9 +27,8 @@
  
  <br><br>
  <div style="text-align: center;">
-  <img src="https://ibb.co/BVsNz80z;                                             
-       alt="IMG-20251107-WA0000" 
-       style="border: 5px solid #FF0000; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+          <a href="https://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="0"></a>                                     
+       <style="border: 5px solid #FF0000; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
  </div>
  
 <style>
