--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-right<!doctype HTML>
+<!doctype HTML>
 <html>
 
 <head>
@@ -17,6 +17,7 @@ right<!doctype HTML>
  </div>
   <br>
   <a href="#">UPDATES</a>
+ <style="border: 13px solid red; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
   <br>
   <a href="#">MENU</a>
  <br>
