--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  </div>
   <br>
   <a href="updates.html">UPDATES</a>
- <div style="dispay: flex; justify-content;center;">
+ <div style="dispay: flex; justify-content:center;">
   <br>
   <div style="dispay: flex; justify-content: center;">
   <a href="menu.html">MENU</a>
