--- a/host.html
+++ b/host.html
@@ -1,1 +1,304 @@
+<a href="index.html"></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Host Tester - Matrix Style STABLE</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 10;
+      padding: 20;
+      box-sizing: border-box;
+    }
+    body {
+      background: #000;
+      color: #00FF41;
+      font-family: 'Fira Mono', 'Consolas', monospace;
+      min-height: 100vh;
+      position: relative;
+      overflow: hidden;
+    }
+    .matrix-bg {
+      position: fixed;
+      top: 0; left: 0; width: 100vw; height: 100vh;
+      z-index: 0;
+      pointer-events: none;
+      display: block;
+    }
+    .container {
+      max-width: 480px;
+      margin: 60px auto;
+      background: rgba(0,0,0,0.92);
+      box-shadow: 0 0 24px #00FF4188;
+      border: 2px solid #00FF41;
+      border-radius: 9px;
+      padding: 36px 32px 28px 32px;
+      position: relative;
+      z-index: 10;
+    }
+    h2 {
+      font-family: monospace;
+      font-size: 2.2rem;
+      letter-spacing: 2px;
+      text-align: center;
+      text-shadow: 0 0 8px #00FF41;
+      margin-top: 0;
+      margin-bottom: 24px;
+      filter: blur(0.3px);
+      user-select: none;
+    }
+    label, input, button {
+      font-size: 1.05rem;
+      font-family: inherit;
+      letter-spacing: 1px;
+      color: #00FF41;
+    }
+    label {
+      user-select: none;
+    }
+    input {
+      background: #020;
+      border: 1px solid #00FF41;
+      border-radius: 3px;
+      color: #00FF41;
+      padding: 3px 10px;
+      min-width: 210px;
+      margin-right: 8px;
+      transition: box-shadow 0.2s;
+    }
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 7px #00ff41cc;
+    }
+    button {
+      background: none;
+      border: 2px solid #00FF41;
+      border-radius: 4px;
+      padding: 6px 16px;
+      color: #00FF41;
+      cursor: pointer;
+      transition: background 0.2s, box-shadow 0.2s;
+      font-weight: bold;
+      box-shadow: 0 0 6px #00FF4155;
+      outline: none;
+      margin-top: 16px;
+      user-select: none;
+    }
+    button:hover, button:focus {
+      background: #003a15;
+      box-shadow: 0 0 14px #00FF41;
+    }
+    #result {
+      margin-top: 30px;
+      font-weight: bold;
+      background: #001800;
+      border: 1px solid #00FF41;
+      border-radius: 6px;
+      padding: 24px 13px 20px 13px;
+      min-height: 30px;
+      font-size: 1.18rem;
+      word-break: break-all;
+      white-space: pre-line;
+      text-shadow: 0 0 5px #00FF41AA;
+      box-shadow: 0 0 20px #00FF4177;
+      min-width: 225px;
+      transition: background 0.2s;
+    }
+    .glitch {
+      position: relative;
+      color: #00FF41;
+      animation: glitch 1.1s linear infinite;
+    }
+    @keyframes glitch {
+      0% { text-shadow: 2px 0 #0ff, -2px 0 #0f0; }
+      25% { text-shadow: -2px 0 #0ff, 2px 0 #0f0; }
+      50% { text-shadow: 2px 0 #0f0, -2px 0 #0ff; }
+      75% { text-shadow: -2px 0 #0f0, 2px 0 #0ff; }
+      100% { text-shadow: 2px 0 #0ff, -2px 0 #0f0; }
+    }
+    .terminal-effect {
+      border-left: 2.5px solid #00FF41;
+      padding-left: 12px;
+      animation: blink-caret 1s step-end infinite;
+      display: inline-block;
+      margin-top: 0px;
+      background: linear-gradient(90deg, #00290055 55%, transparent 100%);
+    }
+    @keyframes blink-caret {
+      from, to { border-color: transparent; }
+      50% { border-color: #00FF41; }
+    }
+    ::selection { background: #002100; color: #0f0; }
+    ::-webkit-scrollbar { width: 9px; background: #001; }
+    ::-webkit-scrollbar-thumb { background: #00FF4112; }
+  </style>
+</head>
+<body>
+  <canvas class="matrix-bg"></canvas>
+  <div class="container">
+    <h2 class="glitch">[.Host Tester.]</h2>
+    <label for="hostname">host: </label>
+    <input type="text" id="hostname" autocomplete="off" spellcheck="false" placeholder="Enter IP or domain">
+    <button id="test-btn">[ test ]</button>
+    <div id="result"><span class="terminal-effect"></span></div>
+  </div>
+  <script>
+    // ========== Matrix Animation ==========
+    const matrixCanvas = document.querySelector('.matrix-bg');
+    const ctx = matrixCanvas.getContext('2d');
+    let fontSize = 18, cols, drops, chars, W, H;
+    function resizeMatrix() {
+      W = window.innerWidth;
+      H = window.innerHeight;
+      matrixCanvas.width = W;
+      matrixCanvas.height = H;
+      cols = Math.floor(W / fontSize);
+      drops = [];
+      for (let i = 0; i < cols; i++) drops[i] = Math.random() * -30;
+    }
+    function initMatrix() {
+      chars = 'アァカサタナハマヤャラワンABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%^&*'.split('');
+      resizeMatrix();
+    }
+    function drawMatrix() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.12)';
+      ctx.fillRect(0, 0, W, H);
+      ctx.font = fontSize + "px monospace";
+      for (let i = 0; i < cols; i++) {
+        let text = chars[Math.floor(Math.random() * chars.length)];
+        let x = i * fontSize;
+        let y = drops[i] * fontSize;
+        ctx.fillStyle = '#00FF41';
+        ctx.shadowColor = "#00FF77";
+        ctx.shadowBlur = 13;
+        ctx.fillText(text, x, y);
+        drops[i]++;
+        if (y > H && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+      }
+      ctx.shadowBlur = 0;
+    }
+    initMatrix();
+    setInterval(drawMatrix, 42);
+    window.addEventListener('resize', resizeMatrix);
 
+    // ========== Glitch Animation Tweak ==========
+    setInterval(() => {
+      document.querySelector('.glitch').style.animationDuration = (1 + Math.random() * 0.2) + 's';
+    }, 2800);
+
+    // ========== Terminal Output Animation ==========
+    function printTerminalResult(text) {
+      const res = document.getElementById('result');
+      res.innerHTML = '';
+      let idx = 0;
+      const te = document.createElement('span');
+      te.className = 'terminal-effect';
+      res.appendChild(te);
+
+      function printNext() {
+        if (idx < text.length) {
+          te.textContent += text.charAt(idx);
+          idx++;
+          let jitter = text.charAt(idx - 1) === '\n' ? 32 : (14 + Math.random()*13);
+          setTimeout(printNext, jitter);
+        } else {
+          te.style.borderColor = 'transparent';
+        }
+      }
+      printNext();
+    }
+
+    // ========== Hacker-Style Sound ==========
+    let audioCtx = null;
+    function playBeep(success) {
+      try {
+        if (!audioCtx || audioCtx.state === "closed") audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        const o = audioCtx.createOscillator();
+        const g = audioCtx.createGain();
+        o.type = 'square';
+        o.frequency.value = success ? 1050 : 310;
+        g.gain.value = 0.15;
+        o.connect(g);
+        g.connect(audioCtx.destination);
+        o.start();
+        setTimeout(() => {
+          g.gain.exponentialRampToValueAtTime(0.0001, audioCtx.currentTime + 0.145);
+        }, 70);
+        setTimeout(() => {
+          o.stop();
+        }, 180);
+      } catch (e) { /* ignore sound errors */ }
+    }
+
+    // ========== Host Test Logic ==========
+    function testHost() {
+      const host = document.getElementById('hostname').value.trim();
+      let tested = false;
+
+      if (!host) {
+        printTerminalResult("[!] Please enter a hostname or IP.\n");
+        playBeep(false);
+        return;
+      }
+      printTerminalResult("[*] Initiating probe...\n");
+      let controller = new AbortController();
+      let timeoutId;
+
+      function finishResult(str, success) {
+        // Only allow finish once
+        if (tested) return;
+        tested = true;
+        printTerminalResult(str);
+        playBeep(success);
+        clearTimeout(timeoutId);
+      }
+
+      function fetchTest(protocol) {
+        fetch(`${protocol}://${host}/`, {
+          mode: 'no-cors',
+          cache: 'no-store',
+          signal: controller.signal
+        })
+        .then(() => {
+          finishResult(`[+] ✅ Host "${host}" is up [${protocol}]\n`, true);
+        })
+        .catch(() => {
+          if (!tested && protocol === 'https') {
+            // Try http if https fails
+            fetchTest('http');
+          } else if (!tested) {
+            finishResult(`[x] ❌ Host "${host}" is down or unreachable.\n`, false);
+          }
+        });
+        // Timeout in 4300ms (slightly over 4s is most stable)
+        timeoutId = setTimeout(() => {
+          if (!tested) {
+            controller.abort();
+            finishResult(`[!] ⏰ Host "${host}" timed out.\n`, false);
+          }
+        }, 4300);
+      }
+
+      try {
+        fetchTest('https');
+      } catch (e) {
+        finishResult("[x] Test failed due to browser restrictions.\n", false);
+      }
+    }
+
+    // ========== Keyboard and Button Events ==========
+    document.addEventListener('DOMContentLoaded', () => {
+      const input = document.getElementById('hostname');
+      const button = document.getElementById('test-btn');
+      input.addEventListener('keydown', function(e) {
+        if (e.key === "Enter") testHost();
+      });
+      button.addEventListener('click', () => testHost());
+      printTerminalResult("[ matrix / net_scan ]\n");
+    });
+  </script>
+</body>
+</html>
