--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <br>
   <a href="menu.html">MENU</a>
   <div style="display: flex; justify-content: center;">
-  </div>
+  
  <br>
   <a href="about.html">ABOUT</a>
  <div style="display: flex; justify-content: center;">
@@ -30,7 +30,7 @@
   <br><br><br>
   <br><br><br>
  <div style="text-align: center;">
-          <a href="https://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="0"></a>                                     
+          <a href="ttps://ibb.co/BVsNz80z"><img src="https://i.ibb.co/MDN62qF2/IMG-20251107-WA0000.jpg" alt="IMG-20251107-WA0000" border="0"></a>                                     
        <style="border: 5px solid #FF0000; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
  
 </style>
