--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
  </div>
   <br>
   <div style="display: flex; justify-content: center;">
-  <a href="updates.html">CONTACT</a>
+  <a href="updates.html">UPDATES</a>
   </div>
+ <br>
+ <div style="display: flex; justify-content: center;">
+  <a href="about.html">ABOUT</a>
+ </div>
+ <br>
+ <div style="display: flex; justify-content: center;">
+  <a href="menu.html">MENU</a>
+ </div>
