--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
  </style>
 </body>
 <div style="display: flex; justify-content: center;">
-  <a href="host.html">HOST TESTER</a>
+  <a href="host.html" style="font-family: Arial, sans-serif; font-size: 24px; text-decoration: none; color: #337ab7;">HOST TESTER</a>
 </div>
+
   <br>
  <div style="display: flex; justify-content: center;">
   <a href="contact.html">CONTACT</a>
