--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   <br>
  <div style="display: flex; justify-content: center;">
-  <a href="contact.html">CONTACT</a>
+  <a href="contact.html" style="font-size: 30px; text-decoration: none; font-family: 'Fraktur', sans-serif;">𝔖𝔬𝔫𝔱𝔞𝔠𝔱</a>
+</div>
+
  </div>
   <br>
   <div style="display: flex; justify-content: center;">
