--- a/index.html
+++ b/index.html
@@ -7,33 +7,30 @@
 
 <body>
  <h>WELCOME TO LEGENDS OF FREENET</h>
- <style>
-  h{
-   font-size:30px;
-  }
- </style>
+ 
 </body>
 <div style="display: flex; justify-content: center;">
-  <a href="host.html" style="font-family: 'Fraktur',sans-serif; font-size: 30px; text-decoration: blue; color: black;">HOST TESTER</a>
+  <a href="host.html" style="font-family: 'Fraktur',sans-serif; font-size: 70px; text-decoration: blue; color: black;">HOST TESTER</a>
 </div>
 
   <br>
  <div style="display: flex; justify-content: center;">
-  <a href="contact.html" style="font-size: 30px; text-decoration: blue; font-family: 'Fraktur', sans-serif;">𝔖𝔬𝔫𝔱𝔞𝔠𝔱</a>
+  <a href="contact.html" style="font-size: 70px; text-decoration: blue; font-family: 'Fraktur', sans-serif;">𝔖𝔬𝔫𝔱𝔞𝔠𝔱</a>
 </div>
 
  </div>
   <br>
-  <div style="display: flex; justify-content: center;">
-  <a href="updates.html">UPDATES</a>
+ <div style="display: flex; justify-content: center;">
+<a href="update.html" style="font-size: 70px; text-decoration: none;">𝔘𝔭𝔡𝔞𝔱𝔢</a>
+</div>
   </div>
  <br>
  <div style="display: flex; justify-content: center;">
-  <a href="about.html">ABOUT</a>
- </div>
+<a href="about.html" style="font-size: 70px; text-decoration: none;">𝔄𝔟𝔬𝔲𝔱</a>
+</div>
  <br>
  <div style="display: flex; justify-content: center;">
-  <a href="menu.html">MENU</a>
- </div>
+<a href="menu.html" style="font-size: 70px; text-decoration: none;">𝔐𝔢𝔫𝔲</a>
+</div>
 
  <body bgcolor="red">
