--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,5 @@
 <a href="index.html"></a>
-<p>welcome</p>
+<p>CONTACT US ON FACEBOOK</p>
+<p>CONTACT US ON TELEGRAM </p>
+<p>CONTACT US ON FACEBOOK </p>
+<p>CONTACT US ON WHATSAPP </p>
