--- a/about.html
+++ b/about.html
@@ -1,5 +1,7 @@
 <a href="index.html"></a>
-<h>WELCOME TO LEGENDS OF FREENET</h>
+<p>WE SHARE 100% WORKING FILES & HOST
+THIS WEBSITE DOESN'T CONTAIN ANY ADS OF SPAM
+... LEGENDS OF FREENET SITE</p>
 <style>
   a{
     fontsize:50px;
