--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
 </head>
 
 <body>
- <h1>WELCOME TO LOF</h1>
- <style>
-  h{
-   font-size:large;
-  }
- </style>
+ <h1 style="font-size: 70px;">WELCOME TO LEGENDS OF FREENET SITE</h1>
+ 
  <br><br>
  <br><br>
  <br><br>
  
 </body>
 <div style="display: flex; justify-content: center;">
-  <a href="host.html" style="font-family: 'Fraktur',sans-serif; font-size: 40px; text-decoration: blue; color: black;">Host tester</a>
+  <a href="host.html" style="font-family: 'Fraktur',sans-serif; font-size: 40px; text-decoration: blue; color: blue;">Host tester</a>
 </div>
 
   <br>
