--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 
 <body>
- <h1 style="font-size: 60px;">𝗟𝗘𝗗𝗘𝗡𝗗𝗦 𝗢𝗙 𝗙𝗥𝗘𝗘𝗡𝗘𝗧></h1>
+ <h1 style="font-size: 60px;">𝗟𝗘𝗗𝗘𝗡𝗗𝗦 𝗢𝗙 𝗙𝗥𝗘𝗘𝗡𝗘𝗧</h1>
 </div>
   <body>
   <br><br>
  <div style="display: flex; justify-content: center;">
-  <a href="contact.html" style="font-size: 40px; text-decoration: blue; font-family: 'Fraktur', sans-serif;">𝐂𝐎𝐍𝐓𝐀𝐂𝐓</a>
+  <a href="contact.html" style="font-size: 40px; text-decoration: blue; font-family: 'Fraktur', sans-serif;">𝖢𝖮𝖭𝖳𝖠𝖢𝖳</a>
  </div>
   <br>
  <div style="display: flex; justify-content: center;">
