--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,3 @@
 <a href="index.html"></a>
-<p>CONTACT US ON FACEBOOK</p>
-<p>CONTACT US ON TELEGRAM </p>
-<p>CONTACT US ON FACEBOOK </p>
-<p>CONTACT US ON WHATSAPP </p>
+‎<a href ="https://www.facebook.com/profile.php?id=100070641910323">
+‎𝖥𝖠𝖢𝖤𝖡𝖮𝖮𝖪
