--- a/about.html
+++ b/about.html
@@ -1,10 +1,59 @@
-<a href="index.html"></a>
-<p>WE SHARE 100% WORKING FILES & HOST
-THIS WEBSITE DOESN'T CONTAIN ANY ADS OF SPAM
-... LEGENDS OF FREENET SITE</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <a href="index.html">
+<div>THIS WEBSITE IS CREATED FOR VPN USERS & IT DOESN'T CONTAIN ANY SPAMS.</div>
+  <br><br>
+  <div>SOME OF YOU MAY NOT KNOW WHT VPN STANDS FOR...IT MEANS VIRTUAL PRIVATE SERVER IT ..ITS GOOD BECAUSE WHEN U USE A VPN UR LOCATION/ANYTHING WILL BE HIDDEN.</div>
+    <br><br>
+    <div>WE HOPE Y'ALL WILL SUPPORT US & SHOW LOVE TO OUR SITE & WE WILL ALSO MAKE SURE Y'ALL ARE HAPPY🫡</div>
+
+<a href="https://ibb.co/w5cKs22"><img src="https://i.ibb.co/9QZqtdd/IMG-20250916-WA0188.jpg" alt="IMG-20250916-WA0188" border="0" /></a>
 <style>
-  a{
-    fontsize:50px;
+  img{
+    width:200px;
+    height:250px;
+    object-fit: wallpaper;
+    border:2px solid red;
+    border-radius:12px;
+
+
+
   }
 </style>
-<body bgcolor="blue">
+<div>Developer:Abutieyy Mahappen</div>
+
+
+
+<body>
+    <a href="index.html2"></a>
+    <div>sponsored by legends of freenet </div>
+    <br>
+    <div>published: November 2025</div>
+</a>
+<body> <style>
+  div{
+    font-size: medium;
+    color: red;
+    font-family:monospace;
+    text-align: center;
+    text-transform: capitalize;
+    background-color: blue;
+    padding: 6px;
+    border: 4px solid papayawhip;
+    border-radius: 9px;
+
+
+
+  }
+</style>
+
+<body bgcolor="black">
+  
+   
+</html>
