--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,31 @@
-<a href="index.html"></a>
-‎<a href ="https://www.facebook.com/profile.php?id=100070641910323">
-‎𝖥𝖠𝖢𝖤𝖡𝖮𝖮𝖪
+<body>
+    <a href="https://www.facebook.com/profile.php?id=100070641910323">CONTACT ON FACEBOOK</a>
+    <br>
+    <a href="https://www.google.com">CONTANT ON TELEGRAM</a>
+    <br>
+    <a href="mailto:happymhappen101@gmail.com">CONTACT BY EMAIL</a>
+   
+    <style>
+        a{
+            font-size:xx-large;
+            color:blue;
+            font-family :cursive;
+            text-decoration-line: unset;
+            background-color: magenta;
+            text-align:center;
+            padding: 1px;
+            border:4px solid yellow;
+            border-radius: 14px;
+            transition: background-color 0.3s, color 0.3s;
+           
+           
+        }
+
+
+
+
+</style>
+    <body bgcolor="grey">
+   
+
+   
