--- a/updates.html
+++ b/updates.html
@@ -1,2 +1,21 @@
-<a href="index.html"><\a>
-  <p>𝑁𝑜 𝑢𝑝𝑑𝑎𝑡𝑒𝑠 𝑎𝑣𝑎𝑖𝑙𝑎𝑏𝑙𝑒 𝑦𝑒𝑡𝑡</p>
+<body>
+     <a href="index.html">
+         NO UPDATES AVAILABLE AT THIS MOMENT<a
+
+        <body> <style>
+            a{
+                font-size: 35px;
+                color:red;
+                font-family: fantasy;
+                text-align: center;
+                text-decoration-line: overline;
+                text-transform: uppercase;
+                letter-spacing:normal;
+                background-color: black;
+                padding: 15px;
+                border:3px solid red;
+                border-radius: 20px;
+            }
+         </style>
+ <body>
+         <body bgcolor="lightblue"></body>
