--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <a href="index.html">
 <div>THIS WEBSITE IS CREATED FOR VPN USERS & IT DOESN'T CONTAIN ANY SPAMS.</div>
   <br><br>
-  <div>SOME OF YOU MAY NOT KNOW WHT VPN STANDS FOR...IT MEANS VIRTUAL PRIVATE SERVER IT ..ITS GOOD BECAUSE WHEN U USE A VPN UR LOCATION/ANYTHING WILL BE HIDDEN.</div>
+//*<div>SOME OF YOU MAY NOT KNOW WHT VPN STANDS FOR...IT MEANS VIRTUAL PRIVATE SERVER IT ..ITS GOOD BECAUSE WHEN U USE A VPN UR LOCATION/ANYTHING WILL BE HIDDEN.</div>
     <br><br>
     <div>WE HOPE Y'ALL WILL SUPPORT US & SHOW LOVE TO OUR SITE & WE WILL ALSO MAKE SURE Y'ALL ARE HAPPY🫡</div>
 
