--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button type="button" onclick="alert"(𝐓𝐡𝐢𝐬 𝐩𝐚𝐠𝐞 𝐢𝐬 𝐟𝐨𝐫 𝐯𝐩𝐧 𝐮𝐬𝐞𝐫𝐬)">
     <p>LEGENDS OF FREENET🫠</hl>
         <style>
             p{
