--- a/menu.html
+++ b/menu.html
@@ -34,13 +34,13 @@
 <body>
     <p>Catch Me If I Fall</p>
     <audio controls autoplay muted loop>
-        <source src="Catch Me If I Fall.mp3" type="audio/mpeg">
-        <source src="Catch Me If I Fall.wav" type="audio/wav">
+        <source src="https://drive.google.com/file/d/1VNTE5Lgh0AnXUGX-FwWHByC8XHSs_RA8/view?usp=drivesdk" type="audio/mpeg">
+        <source src="https://drive.google.com/file/d/1VNTE5Lgh0AnXUGX-FwWHByC8XHSs_RA8/view?usp=drivesdk" type="audio/wav">
     </audio>
 
     <p>Dreaming On</p>
     <audio controls>
-        <source src="Dreaming On.mp3">
+        <source https://drive.google.com/file/d/1VNTE5Lgh0AnXUGX-FwWHByC8XHSs_RA8/view?usp=drivesdk">
     </audio>
 
     <p>Losing My Mind</p>
