--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <body>
-    <a href="https://www.facebook.com/profile.php?id=100070641910323">CONTACT ON FACEBOOK</a>
+    <a href="https://www.facebook.com/profile.php?id=61578554543648">CONTACT ON FACEBOOK</a>
     <br>
-    <a href="https://www.google.com">CONTANT ON TELEGRAM</a>
+    <a href="https://t.me/THEBLACKPANRHER">CONTANT ON TELEGRAM</a>
     <br>
     <a href="mailto:happymhappen101@gmail.com">CONTACT BY EMAIL</a>
    
