--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <a href="contact.html">CONTACT</a>
 <br>
-    <a href="host.html">𝖧𝖮𝖲𝖳 𝖢𝖧𝖤𝖢𝖪𝖤𝖱</a
+    <a href="host.html">HOST CHECKER</a
        
     <br><br>
     <body>
