--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,13 @@
 <body>
-    <a href="https://www.facebook.com/profile.php?id=61578554543648">CONTACT ON FACEBOOK</a>
+
+    >Contact Us</h2>
+    <p>IF YOU HAVE ANY QUESTION'S, SUGGESTIONS, OR NEED SUPPORT, PLEASE REACT TOU US:</p>
     <br>
-    <a href="https://t.me/THEBLACKPANRHER">CONTANT ON TELEGRAM</a>
+    <a href="https://www.facebook.com/profile.php?id=61578554543648">FACEBOOK</a>
     <br>
-    <a href="mailto:happymhappen101@gmail.com">CONTACT BY EMAIL</a>
+    <a href="https://t.me/THEBLACKPANRHER">TELEGRAM</a>
+    <br>
+    <a href="mailto:happymhappen101@gmail.com">EMAIL</a>
    
     <style>
         a{
