--- a/updates.html
+++ b/updates.html
@@ -1,7 +1,8 @@
 <body>
      <a href="index.html">
-         NO UPDATES AVAILABLE AT THIS MOMENT<a
-          version: 1.2.1
+         Version 1.2 released with improved stability.</li>
+      <li>New TLS files added for enhanced security.</li>
+      <li>Upcoming features: User customization and auto-updates.</li>
         <body> <style>
             a{
                 font-size: 35px;
