--- a/updates.html
+++ b/updates.html
@@ -1,8 +1,6 @@
 <body>
      <a href="index.html">
-         Version 1.2 released with improved stability.</li>
-      <li>New TLS files added for enhanced security.</li>
-      <li>Upcoming features: User customization and auto-updates.</li>
+        NO UPDATES AVAILABLE AT THIS MOMENT🚀version 1.2 
         <body> <style>
             a{
                 font-size: 35px;
