--- a/about.html
+++ b/about.html
@@ -13,20 +13,13 @@
 <br><br>
     🔒 What You Can Say About a VPN:
 1. Privacy Protector:
-A VPN hides your IP address and encrypts your internet connection — making it hard for hackers, websites, or even your ISP to track your online activity.
+A VPN hides your IP address and encrypts your internet connection 
 <br><br>
-2. Secure Browsing:
-It creates a private tunnel between your device and the internet, keeping your data safe when using public Wi-Fi (like in cafés or airports).
-<br><br>
-    3. Freedom Online:
-VPNs let you access websites, videos, or apps that might be blocked in your region by connecting through servers in other countries.
-<br><br>
-4. Anonymity:
+2. Anonymity:
 It helps you stay anonymous online — your real location and identity are hidden.
 <br><br>
-    5. Safer Downloads & Streaming:
+    3. Safer Downloads & Streaming:
 Many people use VPNs to stream safely or to download files without revealing their IP address.
-💡 Example Line to Tell People:
 <br><br>
 > “A VPN keeps your online activity private, protects you on public Wi-Fi, and gives you access to the open internet without restrictions.”</div>
     <br><br>
@@ -46,8 +39,6 @@ Many people use VPNs to stream safely or to download files without revealing the
   }
 </style>
 <div>Developer:Abutieyy Mahappen</div>
-
-
 
 <body>
     <a href="index.html2"></a>
