--- a/bughost.html
+++ b/bughost.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <h1>Updated & Working SNI Hosts for MTN & Vodacom</h1>
-<a href="index.html">
+<a href="index.html"></a>
     <div class="host-list">
         <h2>MTN SNI Hosts</h2>
         <div class="host-item"><a href="https:                                                                                                   
