--- a/bughost.html
+++ b/bughost.html
@@ -8,21 +8,21 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #333;
-            color: #fff;
+            background-color: red;
+            color: blue;
             padding: 20px;
         }
         .host-list {
             margin-bottom: 20px;
         }
         .host-item {
-            background-color: #444;
+            background-color: red;
             padding: 10px;
             margin-bottom: 10px;
-            border-radius: 5px;
+            border-radius: 7px;
         }
         .host-item a {
-            color: #00bfff;
+            color: blue;
             text-decoration: none;
         }
         .host-item a:hover {
@@ -39,4 +39,4 @@
         <div class="host-item"><a href="https://mtncloud.sharepoint.com">mtncloud.sharepoint.com</a> - Method: Preserve SNI | Port 80|443</div>                                                                                         
         <div class="host-item"><a href="https://wcedepotal.co.za">wcedepotal.co.za</a> - Method: Use Realm Host | Port: 443</div>
         <div class="host-item"><a href="https://onlinecms.mtn.co.za">onlinecms.mtn.co.za</a> - Method : Use Realm Host | Port:443</div>                                                                        
-        <div class="host-item"><a href="
+        <div class="host-item"><a href="https://client.sovtech.co.za">client.sovtech.co.za</a> - Method : Preserve SNI| Port: 443</div>
