--- a/bughost.html
+++ b/bughost.html
@@ -22,7 +22,7 @@
             border-radius: 7px;
         }
         .host-item a {
-            color: blue;
+            color: white;
             text-decoration: none;
         }
         .host-item a:hover {
