--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ Many people use VPNs to stream safely or to download files without revealing the
     width:200px;
     height:250px;
     object-fit: wallpaper;
-    border:2px solid red;
+    border:2px 𝗋𝖾𝖽;
     border-radius:12px;
 
 
@@ -48,7 +48,7 @@ Many people use VPNs to stream safely or to download files without revealing the
 <body> <style>
   div{
     font-size: medium;
-    color: red;
+    color: white;
     font-family:monospace;
     text-align: center;
     text-transform: capitalize;
