--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <a href="index.html">
 <div>THIS WEBSITE IS CREATED FOR VPN USERS & IT DOESN'T CONTAIN ANY SPAMS.</div>
   <br><br>
- <div>VPN (Virtual Private Network) is a tool that helps protect their privacy and security online. Here’s a simple way to explain it clearly and smartly 👇
+ <div>VPN (Virtual Private Network) is a tool that helps protect ur privacy and security online. Here’s a simple way to explain it clearly and smartly 👇
 <br><br>
     🔒 What You Can Say About a VPN:
 1. Privacy Protector:
@@ -48,11 +48,11 @@ Many people use VPNs to stream safely or to download files without revealing the
 <body> <style>
   div{
     font-size: medium;
-    color: white;
+    color: red;
     font-family:monospace;
     text-align: center;
     text-transform: capitalize;
-    background-color: blue;
+    background-color: black;
     padding: 6px;
     border: 4px solid papayawhip;
     border-radius: 9px;
