--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <a href="index.html">
-<p>THIS WEBSITE IS CREATED FOR VPN USERS & IT DOESN'T CONTAIN ANY SPAMS.</p>
+<div>THIS WEBSITE IS CREATED FOR VPN USERS & IT DOESN'T CONTAIN ANY SPAMS.</div>
   <br><br>
- <h>VPN (Virtual Private Network) is a tool that helps protect ur privacy and security online. Here’s a simple way to explain it clearly and smartly 👇
+ <div>VPN (Virtual Private Network) is a tool that helps protect ur privacy and security online. Here’s a simple way to explain it clearly and smartly 👇
 <br><br>
     🔒 What You Can Say About a VPN:
 1. Privacy Protector:
@@ -23,7 +23,7 @@ Many people use VPNs to stream safely or to download files without revealing the
 <br><br>
 > “A VPN keeps your online activity private, protects you on public Wi-Fi, and gives you access to the open internet without restrictions.”</h>
     <br><br>
-    <p>WE HOPE Y'ALL WILL SUPPORT US & SHOW LOVE TO OUR SITE & WE WILL ALSO MAKE SURE Y'ALL ARE HAPPY🫡</p>
+    <div>WE HOPE Y'ALL WILL SUPPORT US & SHOW LOVE TO OUR SITE & WE WILL ALSO MAKE SURE Y'ALL ARE HAPPY🫡</div>
 
 <style>
   img{
@@ -37,13 +37,13 @@ Many people use VPNs to stream safely or to download files without revealing the
 
   }
 </style>
-<div>Developer:Abutieyy Mahappen</div>
+<div>Developer:𝖠𝖻𝗎𝗍𝗂𝖾𝗒𝗒 𝖬𝖺𝗁𝖺𝗉𝗉𝖾𝗇</div>
 
 <body>
     <a href="index.html2"></a>
-    <div>sponsored by legends of freenet </div>
+    <div>𝖲𝗉𝗈𝗇𝗌𝖾𝗋𝖾𝖽 𝖻𝗒 𝖫𝖾𝗀𝖾𝗇𝖽𝗌 𝗈𝖿 𝖿𝗋𝖾𝖾𝗇𝖾𝗍 </div>
     <br>
-    <div>published: November 2025</div>
+    <div>𝗉𝗎𝖻𝗅𝗂𝗌𝗁𝖾𝖽: 09 𝖭𝖮𝖵𝖤𝖬𝖡𝖤𝖱 2025</div>
 </a>
 <body> <style>
   div{
