--- a/about.html
+++ b/about.html
@@ -9,21 +9,21 @@
   <a href="index.html">
 <div>𝖳𝖧𝖨𝖲 𝖶𝖤𝖡𝖲𝖨𝖳𝖤 𝖨𝖲 𝖢𝖱𝖤𝖠𝖳𝖤𝖣 𝖥𝖮𝖱 𝖵𝖯𝖭 𝖴𝖲𝖤𝖱S & 𝖨𝖳 𝖣𝖮𝖤𝖲𝖨𝖭'𝖳 𝖢𝖮𝖭𝖳𝖠𝖨𝖭 𝖠𝖭𝖸 𝖲𝖯𝖠𝖬𝖲.</div>
   <br><br>
- <div>VPN (Virtual Private Network) is a tool that helps protect ur privacy and security online. Here’s a simple way to explain it clearly and smartly 👇
+ <div>𝖵𝖯𝖭 (𝖵𝖨𝖱𝖳𝖴𝖠𝖫  𝖯𝖱𝖨𝖵𝖠𝖳𝖤 𝖭𝖤𝖳𝖶𝖮𝖱𝖪) 𝗂𝗌  𝖺 𝗍𝗈𝗈𝗅 𝗍𝗁𝖺𝗋 𝗁𝖾𝗅𝗉𝗌 𝗉𝗋𝗈𝗍𝖾𝖼𝗍 𝗎𝗋 𝗉𝗋𝗂𝗏𝖺𝖼𝗒 𝖺𝗇𝖽 𝗌𝖾𝖼𝗎𝗋𝗂𝗍𝗒 𝗈𝗇𝗅𝗂𝗇𝖾. 𝖧𝖾𝗋𝖾𝗌 𝖺 𝗌𝗂𝗆𝗉𝗅𝖾 𝗐𝖺𝗒 𝗍𝗈 𝖾𝗑𝗉𝗅𝖺𝗂𝗇 𝗂𝗍 𝖼𝗅𝖾𝖺𝗋𝗅𝗒  𝖺𝗇𝖽 𝗌𝗆𝖺𝗋𝗍𝗒 👇
+<br><b></b>
+     𝖶𝗁𝖺𝗍 𝗒𝗈𝗎 𝖼𝖺𝗇 𝗌𝖺𝗒 𝖠𝖻𝗈𝗎𝗍 𝖵𝖯𝖭:
+1. 𝖯𝗋𝗂𝗏𝖺𝖼𝗒 𝖯𝗋𝗈𝗍𝖾𝖼𝗍𝗈𝗋:
+𝖠 𝖵𝖯𝖭 𝗁𝗂𝖽𝖾𝗌 𝗒𝗈𝗎𝗋  𝖨𝖯 𝖺𝖽𝖽𝗋𝖾𝗌𝗌 𝖺𝗇𝖽 𝖾𝗇𝖼𝗋𝗒𝗉𝗍𝗌 𝗒𝗈𝗎𝗋 𝗂𝗇𝗍𝖾𝗋𝗇𝖾𝗍  𝖼𝗈𝗇𝗇𝖾𝖼𝗍𝗂𝗈𝗇
 <br><br>
-    🔒 What You Can Say About a VPN:
-1. Privacy Protector:
-A VPN hides your IP address and encrypts your internet connection 
+2. 𝖠𝗇𝗈𝗇𝗒𝗆𝗂𝗍𝗒:
+𝖨𝗍 𝗁𝖾𝗅𝗉𝗌 𝗒𝗈𝗎 𝗌𝗍𝖺𝗒 𝖺𝗇𝗈𝗇𝗒𝗆𝗈𝗎𝗌  𝗈𝗇𝗅𝗂𝗇𝖾 — 𝗒𝗈𝗎𝗍 𝗋𝖾𝖺𝗅 𝗅𝗈𝖼𝖺𝗍𝗂𝗈𝗇 𝖺𝗇𝖽  𝗂𝖽𝖾𝗇𝗍𝗂𝗍𝗒 𝖺𝗋𝖾 𝗁𝗂𝖽𝖽𝖾𝗇.
 <br><br>
-2. Anonymity:
-It helps you stay anonymous online — your real location and identity are hidden.
+    3. 𝖲𝖺𝖿𝖾𝗋 𝖽𝗈𝗐𝗇𝗅𝗈𝖺𝖽𝗌 & 𝖲𝗍𝗋𝖾𝖺𝗆𝗂𝗇𝗀:
+𝖬𝖺𝗇𝗒 𝗉𝖾𝗈𝗉𝗅𝖾 𝗎𝗌𝖾 𝖵𝖯𝖭𝖲  𝗍𝗈 𝗌𝗍𝗋𝖾𝖺𝗆 𝗌𝖺𝖿𝖾𝗅𝗒  𝗈𝗋 𝗍𝗈 download 𝖿𝗂𝗅𝖾𝗌 𝗐𝗂𝗍𝗁𝗈𝗎𝗍 𝗋𝖾𝗏𝖾𝖺𝗅𝗂𝗇𝗀 𝗍𝗁𝖾𝗂𝗋 𝖨𝖯 𝖺𝖽𝖽𝗋𝖾𝗌𝗌.
 <br><br>
-    3. Safer Downloads & Streaming:
-Many people use VPNs to stream safely or to download files without revealing their IP address.
-<br><br>
-> “A VPN keeps your online activity private, protects you on public Wi-Fi, and gives you access to the open internet without restrictions.”</div>
+> “𝖠 𝖵𝖯𝖭 𝗄𝖾𝖾𝗉𝗌 𝗒𝗈𝗎𝗋 𝗈𝗇𝗅𝗂𝗇𝖾 𝖺𝖼𝗍𝗂𝗏𝗂𝗍𝗒 𝗉𝗋𝗂𝗏𝖺𝗍𝖾 . 𝗉𝗋𝗈𝗍𝖾𝖼𝗍𝗌 𝗒𝗈𝗎  𝗈𝗇 𝗉𝗎𝖻𝗅𝗂𝖼  𝖶𝖨-𝖥𝖨, 𝖺𝗇𝖽 𝗀𝗂𝗏𝖾𝗌 𝗒𝗈𝗎 𝖺𝖼𝖼𝖾𝗌𝗌 𝗍𝗈 𝗍𝗁𝖾 𝗈𝗉𝖾𝗇 𝗂𝗇𝗍𝖾𝗋𝗇𝖾𝗍 𝗐𝗂𝗍𝗁𝗈𝗎𝗍 𝗋𝖾𝗌𝗍𝗋𝗂𝖼𝗍𝗂𝗈𝗇𝗌.”</div>
     <br><br>
-    <div>WE HOPE Y'ALL WILL SUPPORT US & SHOW LOVE TO OUR SITE & WE WILL ALSO MAKE SURE Y'ALL ARE HAPPY🫡</div>
+    <div>𝖶𝖤 𝖧𝖮𝖯𝖤 𝖸'𝖠𝖫𝖫 𝖶𝖨𝖫𝖫 𝖲𝖴𝖯𝖯𝖮𝖱𝖳 𝖴𝖲 & 𝖲𝖧𝖮𝖶 𝖫𝖮𝖵𝖤 𝖳𝖮 𝖮𝖴𝖱 𝖲𝖨𝖳𝖤 & 𝖶𝖤 𝖶𝖨𝖫𝖫 𝖠𝖫𝖲𝖮 𝖬𝖠𝖪𝖤 𝖲𝖴𝖱𝖤 𝖸'𝖠𝖫𝖫 𝖠𝖱𝖤 𝖧𝖠𝖯𝖯𝖸🫡</div>
 
 <style>
   img{
