--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         font-size: 20px;
        } 
     </style>
+              <a href="login.html"</a>
     <br>
     <a href="updates.html">UPDATES</a>
 
