--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         error.style.display = "none";
 
         setTimeout(() => {
-          window.location.href = "index.html"; // change to your main page
+          window.location.href = "home.html"; // change to your main page
         }, 2000);
       } else {
         error.style.display = "block";
