--- a/bughost.html
+++ b/bughost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTN & Vodacom SNI Hosts</title>
-    <a href="index.html"></a>
+    <a href="home.html"></a>
     <style>
         body {
             font-family: Arial, sans-serif;
