Update login portal details and branding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Freenet Login Portal</title>
+  <title>BNK Login Portal</title>
 
   <style>
     * {
@@ -139,17 +139,17 @@
   <div class="bubble"></div>
   <div class="bubble"></div>
 
-  <div class="info">🔑 Login: <b>12345</b> | Password: <b>Mahappen</b></div>
+  <div class="info">🔑 Login: <b>BNK</b> | Password: <b>BNK</b></div>
 
   <div class="login-box">
-    <h2>LOF FREENET ACCESS 🔐</h2>
+    <h2>BNK FREENET ACCESS 🔐</h2>
     <input type="text" id="username" placeholder="Enter Login ID">
     <input type="password" id="password" placeholder="Enter Password">
     <button onclick="login()">Login</button>
     <p id="message"></p>
   </div>
 
-  <footer>💻 Powered by Legends of Freenet | Created by Mahappen</footer>
+  <footer>💻 Powered by Black Net Kings | Created by Abutieyy Mahappen</footer>
 
   <script>
     function login() {
@@ -157,7 +157,7 @@
       const pass = document.getElementById("password").value;
       const msg = document.getElementById("message");
 
-      if (user === "12345" && pass === "Mahappen") {
+      if (user === "BNK" && pass === "BNK") {
         msg.textContent = "✅ Login Successful! Redirecting...";
         msg.style.color = "lime";
         setTimeout(() => {
