--- a/home.html
+++ b/home.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BNK PROJECT</title>
 </head>
 <body>
-    <p>LEGENDS OF FREENET🫠</hl>
+    <p>BLACK NET KINGS🫠</hl>
         <style>
             p{
             font-size: 20px;
