Update developer info and publication date in about.html

--- a/about.html
+++ b/about.html
@@ -37,13 +37,14 @@
 
   }
 </style>
-<div>Developer:𝖠𝖻𝗎𝗍𝗂𝖾𝗒𝗒 𝖬𝖺𝗁𝖺𝗉𝗉𝖾𝗇</div>
+<div>Developer:𝖠𝖻𝗎𝗍𝗂𝖾𝗒𝗒 𝖬𝖺𝗁𝖺𝗉𝗉𝖾𝗇 BNK</div>
 
 <body>
     <a href="index.html2"></a>
-    <div>𝖲𝗉𝗈𝗇𝗌𝖾𝗋𝖾𝖽 𝖻𝗒 𝖫𝖾𝗀𝖾𝗇𝖽𝗌 𝗈𝖿 𝖿𝗋𝖾𝖾𝗇𝖾𝗍 </div>
+    <div>Made for BNK (BLACK NET KINGS) </div>
     <br>
-    <div>𝗉𝗎𝖻𝗅𝗂𝗌𝗁𝖾𝖽: 09 𝖭𝖮𝖵𝖤𝖬𝖡𝖤𝖱 2025</div>
+    <div>𝗉𝗎𝖻𝗅𝗂𝗌𝗁𝖾𝖽: 11 DECEMBER 2025</div>
+    <input type="time">
 </a>
 <body> <style>
   div{
