Fix HTML structure for updates message

--- a/updates.html
+++ b/updates.html
@@ -1,6 +1,6 @@
 <body>
      <a href="home.html">
-        NO UPDATES AVAILABLE RYT NOW🚀version 1.2 
+       <div></div>NO UPDATES AVAILABLE RYT NOW🚀version 1.2</div> 
         <body> <style>
             a{
                 font-size: 30px;
